terminal game finished; started GUI

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <body>
     <h1>Towers Of Hanoi</h1>
     <hr/>
-      <div id="top-row" data-row="top" class="red row" onclick="selectRow(this)"></div>
-      <div id="middle-row" data-row="middle" class="yellow row" onclick="selectRow(this)"></div>
-      <div id="bottom-row" data-row="bottom" class="green row"  onclick="selectRow(this)">
-        <div id="4" data-size="4" data-color="yellow" class="stone" ></div>
+      <div id="top-row" data-row="top" class="red row" ="dropStone" ondrop="dropStone" onmousedown="selectRow(this)"></div>
+      <div id="middle-row" data-row="middle" class="yellow row" ="dropStone" ondrop="dropStone" onmousedown="selectRow(this)"></div>
+      <div id="bottom-row" data-row="bottom" class="green row" ="dropStone" ondrop="dropStone" onmousedown="selectRow(this)">
+        <div id="4" data-size="4" data-color="yellow" class="stone"></div>
         <div id="3" data-size="3" data-color="red" class="stone" ></div>
         <div id="2" data-size="2" data-color="green" class="stone" ></div>
-        <div id="1" data-size="1" data-color="blue" class="stone" ></div>
+        <div id="1" data-size="1" data-color="blue" class="stone"  draggable="true" ondragstart=dragStart(event) ondragend=dragEnd(event)></div>
       </div>
     <hr/>
   </body>
